--- a/src/app/components/listing-detail-page/listing-detail-page.component.html
+++ b/src/app/components/listing-detail-page/listing-detail-page.component.html
@@ -1,4 +1,6 @@
-<div class="content-box">
+<div class="content-box"
+     *ngIf="!isLoading">
+  <p>This listing has been viewed {{listing.views}} </p>
   <a routerLink="/listings">
     <button>Back</button>
   </a>
@@ -8,4 +10,7 @@
   <a routerLink="/contact/{{listing.id}}">
     <button>Contact seller</button>
   </a>
+</div>
+<div class="content-box" *ngIf="isLoading">
+  <h3>Loading...</h3>
 </div>
