--- a/src/app/components/new-listing-page/new-listing-page.component.html
+++ b/src/app/components/new-listing-page/new-listing-page.component.html
@@ -2,5 +2,5 @@
   <h2>Create new listing</h2>
   <app-listing-data-form
     buttonText="Create listing"
-    (onSubmit)="onSubmit()"></app-listing-data-form>
+    (onSubmit)="onSubmit($event)"></app-listing-data-form>
 </div>
